syntax = "proto3";

option go_package = "rpcWithApplicationLayerAuth/services";

package services;

service Echo {
  rpc Echo (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string message = 1;
  string publicKey = 2;
  bytes signature = 3;
}

message EchoReply {
  string message = 1;
}

service Add {
  rpc Add (AddRequest) returns (AddReply) {}
}

message AddRequest {
  double a = 1;
  double b = 2;
}

message AddReply {
  double result = 1;
}
